--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             data-auto-animate
             data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
           >
-            <h1 style="margin-top: 20px" data-id="3drade">3학년 2학기</h1>
+            <h1 style="margin-top: 20px" data-id="3drade" class="r-fit-text">
+              우리는 누구인가: 옛날과 오늘날의 가족
+            </h1>
             <div class="r-hstack justify-center">
               <div
                 data-id="box1"
@@ -126,6 +128,436 @@
                   margin: 10px;
                 "
               ></div>
+            </div>
+          </section>
+          <section
+            data-auto-animate
+            data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
+          >
+            <div class="r-hstack justify-center">
+              <div
+                class="core-idea"
+                style="display: flex; flex-direction: column"
+              >
+                <div
+                  data-id="box1"
+                  data-auto-animate-delay="0"
+                  style="
+                    background: cyan;
+                    width: 150px;
+                    height: 100px;
+                    margin: 10px;
+                  "
+                ></div>
+                <div>
+                  <text style="font-size: 2rem">핵심 아이디어</text>
+                </div>
+              </div>
+              <div
+                class="concep-lens"
+                style="display: flex; flex-direction: column"
+              >
+                <div
+                  data-id="box2"
+                  data-auto-animate-delay="0.1"
+                  style="
+                    background: magenta;
+                    width: 150px;
+                    height: 100px;
+                    margin: 10px;
+                  "
+                ></div>
+                <div>
+                  <text style="font-size: 2rem">개념적 렌즈</text>
+                </div>
+              </div>
+              <div style="display: flex; flex-direction: column">
+                <div
+                  data-id="box3"
+                  data-auto-animate-delay="0.2"
+                  style="
+                    background: yellow;
+                    width: 150px;
+                    height: 100px;
+                    margin: 10px;
+                  "
+                ></div>
+                <div>
+                  <text style="font-size: 2rem">단원재설계안</text>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section
+            data-auto-animate
+            data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
+          >
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>핵심 아이디어</text>
+              </div>
+            </header>
+            <div>
+              <text class="r-fit-text">
+                우리 사회는 급격한 사회 변동과 다양한 사회 문제를<br />
+                경험하고 있으며, 이에 대응하기 위해서는 시민의 역할이 중요하다.
+              </text>
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>개념적 렌즈</text>
+              </div>
+            </header>
+            <div>
+              <text class="r-fit-text"> 다양성</text>
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                data-id="header-title"
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>단원 재설계안</text>
+              </div>
+            </header>
+            <div>
+              <table>
+                <tr>
+                  <th scope="col">구분</th>
+                  <th scope="col">내용</th>
+                </tr>
+                <tr>
+                  <td>핵심개념</td>
+                  <td>가족, 결혼 풍습, 문화, 변화, 전망</td>
+                </tr>
+              </table>
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                data-id="header-title"
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>단원 재설계안</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <table>
+                <tr>
+                  <th scope="col">구분</th>
+                  <th scope="col">내용</th>
+                </tr>
+                <tr>
+                  <td>성취기준</td>
+                  <td>
+                    <p>
+                      <text style="font-size: 2rem"
+                        >[4사03-01] 최근 사회 변화의 양상과 특징을 파악하고,
+                        그로 인해 나타난 생활모습의 변화를 탐색한다.</text
+                      >
+                    </p>
+                    <p>
+                      <text style="font-size: 2rem">
+                        [4도02-01] 효, 우애의 의미와 필요성을 명료하게 이해하고
+                        가족의 행복을 위해 할 수 있는 일을 탐색하여 실천 계획을
+                        세운다.
+                      </text>
+                    </p>
+                    <p>
+                      <text style="font-size: 2rem">
+                        [4국03-04] 목적과 주제를 고려하여 독자에게 마음을 전하는
+                        글을 쓴다.
+                      </text>
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                data-id="header-title"
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>단원 재설계안</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <img src="public/32concept.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>결과</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <div>
+                <p>
+                  <text> 수업자 수업 소감 및 후기 </text>
+                </p>
+                <p>
+                  <text>학생 결과물 및 학생 수업 소감</text>
+                </p>
+              </div>
             </div>
           </section>
         </section>
