--- a/index.html
+++ b/index.html
@@ -554,6 +554,10 @@
                 <p>
                   <text> 수업자 수업 소감 및 후기 </text>
                 </p>
+                <blockquote style="text-align:">
+                  &ldquo;개념기반 수업을 하다보니<br />
+                  아직도 잘 모르겠어요.&rdquo;
+                </blockquote>
                 <p>
                   <text>학생 결과물 및 학생 수업 소감</text>
                 </p>
