--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <div style="margin-top: 50px">
               <div>
                 <p>
-                  <text> 수업자 수업 소감 및 후기 </text>
+                  <text> 수업자 수업 소감 및 후기.배경은 수업동영상 </text>
                 </p>
                 <blockquote style="text-align:">
                   &ldquo;개념기반 수업을 하다보니<br />
