--- a/index.html
+++ b/index.html
@@ -1118,10 +1118,31 @@
         </section>
         <section
           data-transition="convex"
-          data-background-gradient="linear-gradient(to right, #d4fc79, #96e6a1)"
+          data-background-gradient="linear-gradient(to top, #30cfd0, #330867)"
         >
           <section data-auto-animate>
             <h1>제언</h1>
+          </section>
+          <section data-auto-animate>
+            <h1>제언</h1>
+            <ul>
+              <li>suggest 1</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1>제언</h1>
+            <ul>
+              <li>suggest 1</li>
+              <li>suggest 2</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1>제언</h1>
+            <ul>
+              <li>suggest 1</li>
+              <li>suggest 2</li>
+              <li>suggest 3</li>
+            </ul>
           </section>
         </section>
       </div>
