--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -37,7 +37,11 @@
             여수서초 교사 김성식
           </h4>
         </section>
-
+        <section
+          data-background-gradient="linear-gradient(to right, #a6c0fe, #f68084)"
+        >
+          <h1>개념기반 교육과정</h1>
+        </section>
         <section data-auto-animate id="3-2">
           <section data-auto-animate>
             <div class="r-hstack justify-content">
@@ -554,7 +558,7 @@
                 <p>
                   <text> 수업자 수업 소감 및 후기.배경은 수업동영상 </text>
                 </p>
-                <blockquote style="text-align:">
+                <blockquote style="text-align: ">
                   &ldquo;개념기반 수업을 하다보니<br />
                   아직도 잘 모르겠어요.&rdquo;
                 </blockquote>
@@ -1076,7 +1080,7 @@
                 <p>
                   <text> 수업자 수업 소감 및 후기.배경은 수업동영상 </text>
                 </p>
-                <blockquote style="text-align:">
+                <blockquote style="text-align: ">
                   &ldquo;개념기반 수업을 하다보니<br />
                   아직도 잘 모르겠어요.&rdquo;
                 </blockquote>
