--- a/index.html
+++ b/index.html
@@ -67,26 +67,31 @@
           <h2 style="color: black">전이</h2>
         </section>
         <section
-          data-background-gradient="linear-gradient(to bottom, #cd9cf2, #f6f3ff)"
+          data-background-gradient="linear-gradient(to right, #fa709a, #fee140)"
         >
           <h1>발견?</h1>
-            <div class="fragment fade-up" style="margin-bottom: 15px;">
-              다양한
-              <span class="fragment highlight-blue">사례</span>
-              <span>에서</span>
-            </div>
-            <div class="fragment fade-up">
-              개념을 학생이
-              <span class="fragment highlight-blue">찾아</span>
-              낸다
+          <div class="fragment fade-up" style="margin-bottom: 15px">
+            다양한
+            <span class="fragment highlight-blue">사례</span>
+            <span>에서</span>
+          </div>
+          <div class="fragment fade-up">
+            개념을 학생이
+            <span class="fragment highlight-blue">찾아</span>
+            낸다
+          </div>
         </section>
-        <section data-background-gradient="linear-gradient(to bottom,#6a85b6, #bac8e0">
+        <section
+          data-background-gradient="linear-gradient(to bottom,#6a85b6, #bac8e0"
+        >
           <h1>전이?</h1>
-          <div class="fragment fade-up" style="margin-bottom: 15px;">
+          <div class="fragment fade-up" style="margin-bottom: 15px">
             학습한 개념과 일반화 지식, 기능을 활용해서
           </div>
           <div class="fragment fade-up">
-            실제 있음직한 혹은 <span class="fragment highlight-red">실생활 문제</span>를 <span class="fragment highlight-red">해결</span>한다
+            실제 있음직한 혹은
+            <span class="fragment highlight-blue">실생활 문제</span>를
+            <span class="fragment highlight-blue">해결</span>한다
           </div>
         </section>
         <section data-auto-animate id="3-2">
