--- a/index.html
+++ b/index.html
@@ -1850,20 +1850,16 @@
           <section data-auto-animate>
             <h1>결론</h1>
             <ul>
-              <li>
-                개념 기반 교육과정은 2022 개정 교육과정에서 요구하는 핵심 역량을
-                함양하는데 도움이 된다.
-              </li>
+              <li>2022 개정 교육과정에서 요구하는 핵심 역량 함양</li>
             </ul>
           </section>
           <section data-auto-animate>
             <h1>결론</h1>
             <ul>
               <li style="margin-bottom: 50px">
-                개념 기반 교육과정은 2022 개정 교육과정에서 요구하는 핵심 역량을
-                함양에 도움
+                2022 개정 교육과정에서 요구하는 핵심 역량 함양
               </li>
-              <li>개념 기반 교육과정은 교육과정 전문가로서 교사 역량 증진</li>
+              <li>교육과정 전문가로서 교사 역량 증진</li>
             </ul>
           </section>
         </section>
