--- a/index.html
+++ b/index.html
@@ -1898,6 +1898,191 @@
             </ul>
           </section>
         </section>
+        <section
+          data-transition="convex"
+          data-background-gradient="linear-gradient(to bottom, #c1dfc4, #deecdd)"
+        >
+          <h1 class="r-fit-text">개념 기반 교육과정 학습 흐름</h1>
+          <span
+            class="fragment fade-up"
+            data-fragment-index="1"
+            style="color: black"
+            >귀납적 탐구</span
+          >
+          👉
+          <span
+            class="fragment fade-up"
+            data-fragment-index="2"
+            style="color: black"
+            >개념 습득</span
+          >
+          👉
+          <span
+            class="fragment fade-up"
+            data-fragment-index="3"
+            style="color: black"
+            >일반화</span
+          >
+          👉
+          <span
+            class="fragment fade-up"
+            data-fragment-index="4"
+            style="color: black"
+            >전이</span
+          >
+        </section>
+        <section
+          data-transition="convex"
+          data-background-gradient="linear-gradient(to bottom, #6a85b6, #bac8e0)"
+        >
+          <section>
+            <h1>귀납적 탐구</h1>
+            <div class="r-stack">
+              <img class="fragment" src="public/circle-1.jpeg" width="50%"
+              height="50%"/ ><img class="fragment" src="public/circle-2.jpeg" />
+              <img class="fragment" src="public/circle-3.jpeg" />
+              <img
+                class="fragment"
+                src="public/circle-4.jpeg"
+                width="50%"
+                height="50%"
+              />
+            </div>
+          </section>
+          <section>
+            <h1>원</h1>
+            <div>
+              <img src="public/circle.png" width="100vw" height="100vh" />
+            </div>
+          </section>
+          <section>
+            <h1 class="r-fit-text">생활 속에서 원 모양 찾기</h1>
+          </section>
+        </section>
+        <section
+          data-transition="convex"
+          data-background-gradient="linear-gradient(to bottom, #a3bded, #6991c7)"
+        >
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <div>
+              <span
+                class="fragment fade-up"
+                data-fragment-index="1"
+                style="color: black"
+                >단원명 정하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="2"
+                style="color: black"
+                >개념적 렌즈 파악하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="3"
+                style="color: black"
+                >단원 내 스트랜드 파악하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="4"
+                style="color: black"
+                >단원 내 스트랜드 안에서 소재와 개념 얽기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="5"
+                style="color: black"
+                >일반화 작성하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="6"
+                style="color: black"
+                >안내 질문 만들기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="7"
+                style="color: black"
+                >중요 내용 파악하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="8"
+                style="color: black"
+                >핵심 기능 파악하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="9"
+                style="color: black"
+                >최종 평가 설계하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="10"
+                style="color: black"
+                >학습활동 설계하기</span
+              >👉
+              <span
+                class="fragment fade-up"
+                data-fragment-index="11"
+                style="color: black"
+                >단원 개요 작성하기</span
+              >
+            </div>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">
+                성취 기준 분석해서 배워야할 개념 찾기
+              </text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">개념 간 관계 연결짓기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <span style="color: black" data-id="concept-lens"
+                >개념적 렌즈</span
+              ><span style="color: black"> 선택하기</span>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 data-id="concept-lens">개념적 렌즈</h1>
+            <ul>
+              <li>관점</li>
+              <li>큰 개념</li>
+            </ul>
+          </section>
+
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">귀납적으로 탐구할 자료 찾기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">전이 설계하기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">안내질문 구상하기</text>
+            </p>
+          </section>
+        </section>
       </div>
     </div>
 
