--- a/index.html
+++ b/index.html
@@ -2058,12 +2058,20 @@
           </section>
           <section data-auto-animate>
             <h1 data-id="concept-lens">개념적 렌즈</h1>
+          </section>
+          <section data-auto-animate>
+            <h1 data-id="concept-lens">개념적 렌즈</h1>
+            <ul>
+              <li>관점</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1 data-id="concept-lens">개념적 렌즈</h1>
             <ul>
               <li>관점</li>
               <li>큰 개념</li>
             </ul>
           </section>
-
           <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
             <p>
@@ -2079,7 +2087,55 @@
           <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
             <p>
-              <text style="color: black">안내질문 구상하기</text>
+              <text style="color: black">학습활동 설계하기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">안내 질문 구상하기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1>안내 질문?</h1>
+            <p>
+              <text class="fragment"
+                >학생들이 개념적 사고를 할 수 있게 도와주는 <br />교사의 핵심
+                발문</text
+              >
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1>안내 질문?</h1>
+            <ul>
+              <li>사실적 질문</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1>안내 질문?</h1>
+            <ul>
+              <li style="margin-bottom: 50px">사실적 질문</li>
+              <li>개념적 질문</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1>안내 질문?</h1>
+            <ul>
+              <li style="margin-bottom: 50px">사실적 질문</li>
+              <li style="margin-bottom: 50px">개념적 질문</li>
+              <li>논쟁가능한 질문</li>
+            </ul>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">단원명 정하기</text>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
+            <p>
+              <text style="color: black">단원 개요 작성하기</text>
             </p>
           </section>
         </section>
