--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   "
                 ></div>
                 <div>
-                  <text style="font-size: 2rem">단원재설계안</text>
+                  <text style="font-size: 2rem">단원설계안</text>
                 </div>
               </div>
             </div>
@@ -816,7 +816,7 @@
                   "
                 ></div>
                 <div>
-                  <text style="font-size: 2rem">단원재설계안</text>
+                  <text style="font-size: 2rem">단원설계안</text>
                 </div>
               </div>
             </div>
@@ -1400,7 +1400,7 @@
                   "
                 ></div>
                 <div>
-                  <text style="font-size: 2rem">단원재설계안</text>
+                  <text style="font-size: 2rem">단원설계안</text>
                 </div>
               </div>
             </div>
