IB Core concept

--- a/index.html
+++ b/index.html
@@ -2073,6 +2073,15 @@
             </ul>
           </section>
           <section data-auto-animate>
+            <h1>IB PYP에서 핵심개념</h1>
+            <p>
+              <span style="color: black"
+                >형태, 기능, 원인, 변화, 연결, 관점, 책임, 고찰</span
+              >
+            </p>
+          </section>
+
+          <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
             <p>
               <text style="color: black">귀납적으로 탐구할 자료 찾기</text>
