주란 수정사항 반영중

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div>
@@ -468,7 +468,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -538,7 +538,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -980,7 +980,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div>
@@ -1043,7 +1043,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -1119,7 +1119,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -1301,8 +1301,11 @@
                 <h1 class="r-fit-text" data-id="4grade">4학년 2학기</h1>
               </div>
               <div>
-                <h3>웅천초등학교</h3>
-                <h3>4학년 26명</h3>
+                <h1 class="r-fit-text">변화하는 사회 속의 우리</h1>
+              </div>
+              <div>
+                <h3>웅천초등학교 4학년</h3>
+                <h3>남 12명, 여 14명 총 26명</h3>
               </div>
               <div></div>
             </div>
@@ -1564,7 +1567,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div>
@@ -1627,7 +1630,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -1705,7 +1708,7 @@
                   justify-content: center;
                 "
               >
-                <text>단원 재설계안</text>
+                <text>단원 설계안</text>
               </div>
             </header>
             <div style="margin-top: 50px">
@@ -1758,21 +1761,14 @@
                   justify-content: center;
                 "
               >
-                <text>결과</text>
+                <text>총괄평가</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
-              <div>
-                <blockquote>
-                  &ldquo;개념 기반 교육과정에서 말하는 <br />'다양한 사례로
-                  개념을 형성하고 개념과 <br />개념간의 관계로 일반화를 진술하는
-                  <br />과정'이 내가 가르치고 싶어하는 사고의 <br />과정과
-                  닮았다고 생각했다.&rdquo; <br /><br />
-                  &ldquo;학생들이 교과서 없이 수업한 점이 너무 재미있었다고
-                  이야기를 많이 해주어서 <br />이전까지 교과서로 수업한 것이
-                  어땠는지 반성하게 되었다.&rdquo;
-                </blockquote>
-              </div>
+            <div style="margin-top: 100px">
+              <img
+                src="public/ju-final-test.png"
+                style="width: 80vw; height: 60vh"
+              />
             </div>
           </section>
           <section data-auto-animate>
@@ -1821,22 +1817,223 @@
                   justify-content: center;
                 "
               >
-                <text>결과</text>
+                <text>학습활동</text>
               </div>
             </header>
             <div style="margin-top: 50px">
-              <div>
-                <blockquote>
-                  &ldquo;교과서 사회 수업보다 선생님이 만드신 사회수업이 더
-                  재미있었다.&rdquo;
-                  <br /><br />
-                  &ldquo;여러 개념과 주제에 대해서 배울 때 흥미진진하고
-                  재미있었다.&rdquo;
-                  <br /><br />
-                  &ldquo;수업을 하면서 공부하는 문제가 내 주변에서 일어난다는 게
-                  신기하고 <br />더 관심이 생겼다. &rdquo;
-                </blockquote>
+              <!-- 학습활동표 컙쳐 안 추가 -->
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
               </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>수업 장면</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <!-- 2,3,4차시 수업 장면 사진 컙쳐 안 추가 -->
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>활동 결과물</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <!-- 11차시 활동 결과물 사진 추가 -->
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>활동 결과물</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
+              <!-- 12~13차시 활동 결과물 사진 추가 -->
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>수업 후기</text>
+              </div>
+            </header>
+            <div>
+              <!-- 뒷배경으로 학생들 역할극 발표 모습 -->
             </div>
           </section>
         </section>
