주란 수정중

--- a/index.html
+++ b/index.html
@@ -1314,46 +1314,6 @@
             data-auto-animate
             data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
           >
-            <h1 style="margin-top: 20px" data-id="4drade" class="r-fit-text">
-              변화하는 사회 속의 우리
-            </h1>
-            <div class="r-hstack justify-center">
-              <div
-                data-id="box1"
-                data-auto-animate-delay="0"
-                style="
-                  background: cyan;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
-              <div
-                data-id="box2"
-                data-auto-animate-delay="0.1"
-                style="
-                  background: magenta;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
-              <div
-                data-id="box3"
-                data-auto-animate-delay="0.2"
-                style="
-                  background: yellow;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
-            </div>
-          </section>
-          <section
-            data-auto-animate
-            data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
-          >
             <div class="r-hstack justify-center">
               <div
                 class="core-idea"
@@ -1820,8 +1780,9 @@
                 <text>학습활동</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
-              <!-- 학습활동표 컙쳐 안 추가 -->
+            <div style="margin-top: 100px; height: 100vh">
+              <img src="public/ju-curriculum.png" style="object-fit: fill;
+              height: 40vh"/ >
             </div>
           </section>
           <section data-auto-animate>
@@ -1873,8 +1834,11 @@
                 <text>수업 장면</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
-              <!-- 2,3,4차시 수업 장면 사진 컙쳐 안 추가 -->
+            <div
+              style="margin-top: 50px; display: flex; width: 30vw; height: 30vh"
+            >
+              <img src="/public/ju-23.jpg" style="margin-right: 50px" />
+              <img src="public/ju-234.jpg" />
             </div>
           </section>
           <section data-auto-animate>
