--- a/index.html
+++ b/index.html
@@ -1781,8 +1781,7 @@
               </div>
             </header>
             <div style="margin-top: 100px; height: 100vh">
-              <img src="public/ju-curriculum.png" style="object-fit: fill;
-              height: 40vh"/ >
+              <img src="public/ju-curriculum.png" style="object-fit: cover" />
             </div>
           </section>
           <section data-auto-animate>
@@ -1835,9 +1834,9 @@
               </div>
             </header>
             <div
-              style="margin-top: 50px; display: flex; width: 30vw; height: 30vh"
+              style="margin-top: 50px; display: flex; width: 50vw; height: 50vh"
             >
-              <img src="/public/ju-23.jpg" style="margin-right: 50px" />
+              <img src="public/ju-23.jpg" style="margin-right: 50px" />
               <img src="public/ju-234.jpg" />
             </div>
           </section>
@@ -1890,8 +1889,9 @@
                 <text>활동 결과물</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
+            <div style="margin-top: 100px" style="width: 100vw; height: 100vh">
               <!-- 11차시 활동 결과물 사진 추가 -->
+              <img src="public/11-result.png" style="object-fit: cover" />
             </div>
           </section>
           <section data-auto-animate>
@@ -1943,11 +1943,12 @@
                 <text>활동 결과물</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
+            <div style="margin-top: 100px" style="width: 100vw; height: 100vh">
               <!-- 12~13차시 활동 결과물 사진 추가 -->
+              <img src="public/12-result.png" style="object-fit: cover" />
             </div>
           </section>
-          <section data-auto-animate>
+          <section data-auto-animate data-background-video="">
             <header style="display: flex; position: fixed; top: 0">
               <div class="r-stack">
                 <div
@@ -1997,7 +1998,7 @@
               </div>
             </header>
             <div>
-              <!-- 뒷배경으로 학생들 역할극 발표 모습 -->
+              <img src="public/video/ju-gif.gif" />
             </div>
           </section>
         </section>
